--- a/style.css
+++ b/style.css
@@ -23,3 +23,10 @@ border-radius: 4px;
 }
 .info h3 {
 font-size: 16px;
+margin: 4px 0;
+clor: #002f6c:
+}
+.info p {
+font-size: 13px;
+color; #e0dfdf;
+}
